--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="/css/adminlte.min.css">
   <link rel="stylesheet" href="/css/font-awesome.min.css">
 
-  <title>zadanie_rekrutacyjne</title>
+  <title>Books Searcher</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but zadanie_rekrutacyjne doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but Books Searcher doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
